[project]
name = "s3-graphs-zip"
version = "0.1.0"
description = "Stream JSON objects from one S3 bucket into ZIP batches uploaded to another bucket"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "boto3>=1.37.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.5",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
  "integration: tests that require LocalStack or another S3-compatible endpoint",
]
